Add profile to run docker tests, skip them by default